--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-APP_DB=mongodb+srv://cryptohash:cryptohash123@cluster1.f3piq.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+APP_DB= here comes the database (prefered online : mongo etc)
 APP_SECRET=swiftquiz
 APP_PORT=5000
