--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-APP_DB= here comes the database (prefered online : mongo etc)
+APP_DB=mongodb+srv://swiftteam:swiftquiz@swiftquiz.f3piq.mongodb.net/test
 APP_SECRET=swiftquiz
 APP_PORT=5000
