--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "solo_work",
+  "name": "swiftquiz_backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "node index js"
   },
   "keywords": [],
   "author": "",
