--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "keywords": [
     "heroku"
   ],
-  "author": "",
-  "license": "ISC",
+  "author": "SwiftQuiz Backend",
+  "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -19,11 +19,14 @@
     "consola": "^2.15.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
+    "express-validator": "^6.13.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.11",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
+    "shortid": "^2.2.16",
     "touch": "^3.1.0"
   }
 }
