--- a/package.json
+++ b/package.json
@@ -18,14 +18,19 @@
     "config": "^3.3.6",
     "consola": "^2.15.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.11",
+    "multer": "^1.4.3",
+    "multer-gridfs-storage": "^5.0.2",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
+    "path": "^0.12.7",
     "shortid": "^2.2.16",
     "touch": "^3.1.0"
   }
