--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 APP_DB=mongodb+srv://swiftteam:swiftquiz@swiftquiz.f3piq.mongodb.net/test
 APP_SECRET=swiftquiz
 APP_PORT= process.env.PORT || 5000
-APP_DOMAIN=http://localhost:5000
+APP_DOMAIN=https://swiftquiz-api.herokuapp.com
