--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
+    "fs": "^0.0.1-security",
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.11",
