--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "path": "^0.12.7",
     "shortid": "^2.2.16",
     "streamifier": "^0.1.1",
+    "stripe": "^8.191.0",
     "touch": "^3.1.0",
     "util": "^0.12.4"
   }
