Added Social Authentication Concepts

--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "body-parser": "^1.19.0",
     "config": "^3.3.6",
     "consola": "^2.15.3",
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "express-validator": "^6.13.0",
     "fs": "^0.0.1-security",
     "gridfs-stream": "^1.1.1",
@@ -30,7 +32,12 @@
     "multer": "^1.4.3",
     "multer-gridfs-storage": "^5.0.2",
     "passport": "^0.5.0",
+    "passport-facebook": "^3.0.0",
+    "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
+    "passport-linkedin-oauth2": "^2.0.0",
+    "passport-twitter": "^1.0.4",
     "path": "^0.12.7",
     "shortid": "^2.2.16",
     "streamifier": "^0.1.1",
