--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^5.6.8",
     "multer": "^1.4.3",
     "multer-gridfs-storage": "^5.0.2",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
     "passport": "^0.5.0",
     "passport-facebook": "^3.0.0",
